[tool.poetry]
name = "lavalink-tester"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
readme = "README.md"
packages = [{include = "lavalink_tester"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
websockets = "^10.3"
uvicorn = "^0.18.3"
orjson = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
